--- a/client/index.html
+++ b/client/index.html
@@ -85,7 +85,7 @@
                                         <i class="fa fa-battery-three-quarters fa-5x"></i>
                                     </div>
                                     <div class="col-xs-9 text-right">
-                                        <div class="huge">63&#37</div>
+                                        <div class="huge" id="charge"></div>
 				        <div>Remaining</div> 
                                     </div>
                                 </div>
@@ -114,12 +114,10 @@
                     <div class="col-lg-12">
 			<ol class="breadcrumb">
 			    <li class="active">
-				<i class="fa fa-bar-chart-o fa-fw"></i> Moisture Readings
+				<i class="fa fa-area-chart fa-fw"></i> Moisture Readings
 			    </li>
 			</ol>
-			<div class="panel-body">
-			    <div id="morris-area-chart"></div>
-			</div>
+			<div id="testchart"></div>
                     </div>
                 </div>
                 <!-- /.row -->
@@ -142,8 +140,10 @@
     <!-- Morris Charts JavaScript -->
     <script src="js/plugins/morris/raphael.min.js"></script>
     <script src="js/plugins/morris/morris.min.js"></script>
-    <script src="js/plugins/morris/morris-data.js"></script>
+    <!--<script src="js/plugins/morris/morris-data.js"></script>-->
 
+    <!-- Data extraction script -->
+    <script src="js/extractData.js"></script>
 </body>
 
 </html>
