Add a bound for the number of moisture records

--- a/client/index.html
+++ b/client/index.html
@@ -85,7 +85,7 @@
                                         <i class="fa fa-battery-three-quarters fa-5x"></i>
                                     </div>
                                     <div class="col-xs-9 text-right">
-                                        <div class="huge" id="charge"></div>
+                                        <div class="huge" id="charge">&#45&#45&#37</div>
 				        <div>Remaining</div> 
                                     </div>
                                 </div>
