Added moisture loading with relative moisture calculation

--- a/client/index.html
+++ b/client/index.html
@@ -117,7 +117,7 @@
 				<i class="fa fa-area-chart fa-fw"></i> Moisture Readings
 			    </li>
 			</ol>
-			<div id="testchart"></div>
+			<div id="moisture-chart"></div>
                     </div>
                 </div>
                 <!-- /.row -->
